--- a/index.html
+++ b/index.html
@@ -26,7 +26,264 @@
 <link rel="shortcut icon" type="image/png" sizes="192x192"  href="">
 <!-- micro data -->
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"article","mainEntityOfPage":{"@type":"WebPage","@id":"/"},"headline":"","image":{"@type":"ImageObject","url":""},"datePublished":"","dateModified":"","author":{"@type":"Person","name":""},"publisher":{"@type":"Organization","name":""},"description":""}</script>
-<style>address,blockquote cite,blockquote>footer{font-style:normal}pre{background:#222;color:greenyellow;}input:not([type=checkbox]):not([type=radio]),pre>code,select{display:block}:root{--fg-dark:#fafafc;--fg-light:#1d1d1f;--bg-dark:#1d1d1f;--bg-light:#fafafc;--a-dark:wheat;--a-light:#1a0dab;--font-stack:sans-serif,system-ui}@media (prefers-color-scheme:light){body{color:var(--fg-light);background:var(--bg-light)}a{color:var(--a-light)}}@media (prefers-color-scheme:dark){body{color:var(--fg-dark);background:var(--bg-dark)}a{color:var(--a-dark)}}body{font-family:var(--font-stack);line-height:1.5;max-width:600px;margin: 40px auto;padding:0 10px;text-rendering:optimizeLegibility}button,input,textarea{transition:background-color .1s linear,border-color .1s linear,color .1s linear,box-shadow .1s linear,transform .1s}h1{font-size:2em;line-height:1.3;margin-top:0}h1,h2,h3,h4,h5,h6{margin-bottom:12px}b,h1,h2,h3,h4,h5,h6,strong,th{font-weight:600}blockquote{border-left:4px solid;margin:1em 0;padding:0 1em}blockquote>footer{margin-top:10px}a[href^=mailto]::before{content:'📧 '}a[href^=tel]::before{content:'📞 '}a[href^=sms]::before{content:' '}button,input[type=button],input[type=checkbox],input[type=submit]{cursor:pointer}button,input,select,textarea{color:#fff;background-color:#161f27;font-family:inherit;font-size:inherit;margin-right:6px;margin-bottom:6px;padding:10px;border:none;border-radius:6px;outline:0}button,input:not([type=checkbox]):not([type=radio]),select,textarea{-webkit-appearance:none}textarea{margin-right:0;width:100%;box-sizing:border-box;resize:vertical}button,input[type=button],input[type=submit]{padding-right:30px;padding-left:30px}button:hover,input[type=button]:hover,input[type=submit]:hover{background:#324759}button:focus,input:focus,select:focus,textarea:focus{box-shadow:0 0 0 2px #0096bfab}button:active,input[type=button]:active,input[type=checkbox]:active,input[type=radio]:active,input[type=submit]:active{transform:translateY(2px)}button:disabled,input:disabled,select:disabled,textarea:disabled{cursor:not-allowed;opacity:.5}::-webkit-input-placeholder{color:#a9a9a9}:-ms-input-placeholder{color:#a9a9a9}::-ms-input-placeholder{color:#a9a9a9}::placeholder{color:#a9a9a9}a{text-decoration:none}a:hover{text-decoration:underline}pre>code{padding:10px;overflow-x:auto}img{max-width:100%}hr{border:none;border-top:1px solid #dbdbdb}table{border-collapse:collapse;margin-bottom:10px;width:100%}td,th{padding:6px;text-align:left}th{border-bottom:1px solid #dbdbdb}tbody tr:nth-child(2n){background-color:#161f27}::-webkit-scrollbar{height:10px;width:10px}::-webkit-scrollbar-track{background:#161f27;border-radius:6px}::-webkit-scrollbar-thumb{background:#324759;border-radius:6px}::-webkit-scrollbar-thumb:hover{background:#415c73}nav{margin:1rem auto}</style>
+<style>
+    address,
+    blockquote cite,
+    blockquote>footer {
+        font-style: normal
+    }
+
+    pre {
+        background: #222;
+        color: greenyellow;
+    }
+
+    input:not([type=checkbox]):not([type=radio]),
+    pre>code,
+    select {
+        display: block
+    }
+
+    @media (prefers-color-scheme:light) {
+        body {
+            color: #1d1d1f;
+            background: #fafafc
+        }
+
+        a {
+            color: #1a0dab
+        }
+    }
+
+    @media (prefers-color-scheme:dark) {
+        body {
+            color: #fafafc;
+            background: #1d1d1f
+        }
+
+        a {
+            color: wheat
+        }
+    }
+
+    body {
+        font-family: sans-serif, system-ui;
+        line-height: 1.5;
+        max-width: 600px;
+        margin: 40px auto;
+        padding: 0 10px;
+        text-rendering: optimizeLegibility
+    }
+
+    button,
+    input,
+    textarea {
+        transition: background-color .1s linear, border-color .1s linear, color .1s linear, box-shadow .1s linear, transform .1s
+    }
+
+    h1 {
+        font-size: 2em;
+        line-height: 1.3;
+        margin-top: 0
+    }
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        margin-bottom: 12px
+    }
+
+    b,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    strong,
+    th {
+        font-weight: 600
+    }
+
+    blockquote {
+        border-left: 4px solid;
+        margin: 1em 0;
+        padding: 0 1em
+    }
+
+    blockquote>footer {
+        margin-top: 10px
+    }
+
+    a[href^=mailto]::before {
+        content: '📧 '
+    }
+
+    a[href^=tel]::before {
+        content: '📞 '
+    }
+
+    a[href^=sms]::before {
+        content: ' '
+    }
+
+    button,
+    input[type=button],
+    input[type=checkbox],
+    input[type=submit] {
+        cursor: pointer
+    }
+
+    button,
+    input,
+    select,
+    textarea {
+        color: #fff;
+        background-color: #161f27;
+        font-family: inherit;
+        font-size: inherit;
+        margin-right: 6px;
+        margin-bottom: 6px;
+        padding: 10px;
+        border: none;
+        border-radius: 6px;
+        outline: 0
+    }
+
+    button,
+    input:not([type=checkbox]):not([type=radio]),
+    select,
+    textarea {
+        -webkit-appearance: none
+    }
+
+    textarea {
+        margin-right: 0;
+        width: 100%;
+        box-sizing: border-box;
+        resize: vertical
+    }
+
+    button,
+    input[type=button],
+    input[type=submit] {
+        padding-right: 30px;
+        padding-left: 30px
+    }
+
+    button:hover,
+    input[type=button]:hover,
+    input[type=submit]:hover {
+        background: #324759
+    }
+
+    button:focus,
+    input:focus,
+    select:focus,
+    textarea:focus {
+        box-shadow: 0 0 0 2px #0096bfab
+    }
+
+    button:active,
+    input[type=button]:active,
+    input[type=checkbox]:active,
+    input[type=radio]:active,
+    input[type=submit]:active {
+        transform: translateY(2px)
+    }
+
+    button:disabled,
+    input:disabled,
+    select:disabled,
+    textarea:disabled {
+        cursor: not-allowed;
+        opacity: .5
+    }
+
+    ::-webkit-input-placeholder {
+        color: #a9a9a9
+    }
+
+    :-ms-input-placeholder {
+        color: #a9a9a9
+    }
+
+    ::-ms-input-placeholder {
+        color: #a9a9a9
+    }
+
+    ::placeholder {
+        color: #a9a9a9
+    }
+
+    a {
+        text-decoration: none
+    }
+
+    a:hover {
+        text-decoration: underline
+    }
+
+    pre>code {
+        padding: 10px;
+        overflow-x: auto
+    }
+
+    img {
+        max-width: 100%
+    }
+
+    hr {
+        border: none;
+        border-top: 1px solid #dbdbdb
+    }
+
+    table {
+        border-collapse: collapse;
+        margin-bottom: 10px;
+        width: 100%
+    }
+
+    td,
+    th {
+        padding: 6px;
+        text-align: left
+    }
+
+    th {
+        border-bottom: 1px solid #dbdbdb
+    }
+
+    tbody tr:nth-child(2n) {
+        background-color: #161f27
+    }
+
+    ::-webkit-scrollbar {
+        height: 10px;
+        width: 10px
+    }
+
+    ::-webkit-scrollbar-track {
+        background: #161f27;
+        border-radius: 6px
+    }
+
+    ::-webkit-scrollbar-thumb {
+        background: #324759;
+        border-radius: 6px
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+        background: #415c73
+    }
+
+    nav {
+        margin: 1rem auto
+    }
+</style>
 </head>
 <body>
 <article>
