--- a/marat_gevorkyan_cv.html
+++ b/marat_gevorkyan_cv.html
@@ -64,23 +64,23 @@
 <tr>
 <td>IThub college's IT-incubator</td>
 <td>2+ years</td>
-<td>• <code>junior</code> and <code>middle</code> .NET-dev,<!DOCTYPE html><html lang="en"><head></head><body><br></body></html>• <code>junior</code> Node.js dev,<!DOCTYPE html><html lang="en"><head></head><body><br></body></html>• <code>junior!</code>Dart &amp; Flutter dev,<!DOCTYPE html><html lang="en"><head></head><body><br></body></html>• project-manager and dev-leader in several teams.</td>
+<td>• <code>junior</code> and <code>middle</code> .NET-dev,<!DOCTYPE html><html lang="en"><head></head><body><br></body></html>• <code>junior</code> Node.js dev,<!DOCTYPE html><html lang="en"><head></head><body><br></body></html>• <code>junior</code> Dart &amp; Flutter dev,<!DOCTYPE html><html lang="en"><head></head><body><br></body></html>• project-manager and dev-leader in several teams.</td>
 <td>Project-oriented</td>
 </tr>
 <tr>
 <td>Webcore Studio</td>
 <td>10 months</td>
-<td>Front-end<code>trainee</code> and <code>junior</code> developer.<!DOCTYPE html><html lang="en"><head></head><body><br></body></html><strong>stack</strong>: pure HTML/CSS/JS + Gulp.</td>
+<td>Front-end <code>trainee</code> and <code>junior</code> developer.<!DOCTYPE html><html lang="en"><head></head><body><br></body></html>Stack: pure HTML/CSS/JS + Gulp.</td>
 <td>Fulltime</td>
 </tr>
 </tbody>
 </table>
 <h3 id="open-source">Open source</h3>
 <ul>
-<li><a href="https://github.com/marat0n/DragulaDropula">DragulaDropula</a><!DOCTYPE html><html lang="en"><head></head><body><span style="color:2d2d2d;font-size:.8em;background:#d9d9d9;padding:1px 3px;margin:0 5px">2.1.2</span></body></html> — A .NET Blazor package for dragging-and-droppping functionality (for canvas-oriented UX).</li>
+<li><a href="https://github.com/marat0n/DragulaDropula">DragulaDropula</a> <code>2.1.2</code> — A .NET Blazor package for dragging-and-droppping functionality (for canvas-oriented UX).</li>
 <li><a href="https://github.com/marat0n/kartevonmorgen.ts">KarteVonMorgen</a> — &quot;The map of tomorrow&quot;, a map accumulated all good places, where I participated in updating the landing-page and map-functionality in the russian version of project, before it was cancelled because of the <a href="https://en.wikipedia.org/wiki/Russian_invasion_of_Ukraine">war</a>.</li>
-<li><a href="https://github.com/marat0n/telefunc">Telefunc</a><!DOCTYPE html><html lang="en"><head></head><body><span style="color:2d2d2d;font-size:.8em;background:#d9d9d9;padding:1px 3px;margin:0 5px">alpha</span></body></html> — A F# package for pretty and functional handling your Telegram-bot events.</li>
-<li><a href="https://github.com/marat0n/yerevan.rs">yerevan.rs</a><!DOCTYPE html><html lang="en"><head></head><body><span style="color:2d2d2d;font-size:.8em;background:#d9d9d9;padding:1px 3px;margin:0 5px">0.1.4</span></body></html> — A Rust crate implemented the <a href="https://fsharpforfunandprofit.com/posts/computation-expressions-intro/">Copmutation Expressions</a> idea (or <a href="https://en.wikibooks.org/wiki/Haskell/do_notation">do-notations</a>) in the Rust language.</li>
+<li><a href="https://github.com/marat0n/telefunc">Telefunc</a> <code>alpha</code> — A F# package for pretty and functional handling your Telegram-bot events.</li>
+<li><a href="https://github.com/marat0n/yerevan.rs">yerevan.rs</a> <code>0.1.4</code> — A Rust crate implemented the <a href="https://fsharpforfunandprofit.com/posts/computation-expressions-intro/">Copmutation Expressions</a> idea (or <a href="https://en.wikibooks.org/wiki/Haskell/do_notation">do-notations</a>) in the Rust language.</li>
 </ul>
 <h2 id="education">Education</h2>
 <table>
@@ -95,15 +95,15 @@
 <tbody>
 <tr>
 <td>School</td>
-<td>9 years</td>
+<td>9 y.</td>
 <td>Korolyov, Balashicha, Moscow</td>
 <td></td>
 </tr>
 <tr>
 <td>College</td>
-<td>4 years</td>
+<td>4 y.</td>
 <td>Moscow</td>
-<td>Field: Information Technology and Programming</td>
+<td>Field: Information Technology and Programming. Did volunteering, hackathons and programming master-classes for other studients.</td>
 </tr>
 <tr>
 <td>Self-education</td>
