--- a/marat_gevorkyan_cv.html
+++ b/marat_gevorkyan_cv.html
@@ -33,7 +33,7 @@
   <h1 id="marat-gevorkyan">Marat Gevorkyan</h1>
 <p>20 y.o.</p>
 <p>GitHub: <a href="https://github.com/marat0n">marat0n</a></p>
-<p>Primarily .NET dev, also Flutter, NodeJS, Web-frontend and Rust dev.</p>
+<p>Primarily .NET dev, also Flutter, Python, NodeJS, Web-frontend and Rust dev.</p>
 <h2 id="contact-me">Contact me</h2>
 <p>tel: <a href="tel://+37498842226">+374 98 842 226</a> (Armenia)</p>
 <p>dm: telegram <a href="https://t.me/m_aratka">@m_aratka</a></p>
@@ -50,8 +50,8 @@
 </thead>
 <tbody>
 <tr>
-<td>&quot;Blazee&quot; telegram-bot</td>
-<td>8 monthes</td>
+<td>&quot;Blazee&quot; Telegram Bot</td>
+<td>8 months</td>
 <td>.NET F# <code>middle</code> dev, Flutter <code>middle</code> dev, Telegram-bot creator, Web-designer, Product-manager</td>
 <td>Project-oriented</td>
 </tr>
@@ -100,7 +100,7 @@
 <td></td>
 </tr>
 <tr>
-<td>College</td>
+<td>IThub College</td>
 <td>4 y.</td>
 <td>Moscow</td>
 <td>Field: Information Technology and Programming. Did volunteering, hackathons and programming master-classes for other studients.</td>
@@ -168,7 +168,7 @@
 </tbody>
 </table>
 <p>Also: PHP, Ruby, Lua, Arduino, Godot, Unity.</p>
-<h3 id="databases-managment-systems">Databases managment systems</h3>
+<h3 id="database-managment-systems">Database managment systems</h3>
 <ul>
 <li>MariaDB / MySQL</li>
 <li>PostreSQL</li>
